3-aug&6-Aug/app3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python
spec:
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
    spec:
      containers:
      - name: python
        image: durgaakhil0211/app-python:v1
        ports:
        - containerPort: 5000
