3-aug&6-Aug/svc2.yml
apiVersion: v1
kind: Service
metadata:
  name: adminer-service
spec:
  selector:
    app: adminer
  ports:
  - port: 8080
    targetPort: 8080
