3-aug&6-Aug/svc3.yml
apiVersion: v1
kind: Service
metadata:
  name: python
spec:
  selector:
    app: python
  ports:
  - port: 5000
    targetPort: 5000
