3-aug&6-Aug/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    app.kubernetes.io/name: myingress
#     nginx.ingress.kubernetes.io/ss--redirect: "true"
# spec:
#   tls:
#   - hosts:
#     - demo.com
#     SecretName: tls-secret

  rules:
  # - host: demo.com
    - http:
      paths:
      # - pathType: Prefix
      #   path: /
      #   backend:
      #     service:
      #       name: nginx-service
      #       port: 
      #         number: 80
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: adminer-service
            port:
              number: 8080
      - pathType: Prefix
        path: /
        backend:
          service:
            name: python
            port:
              number: 5000
